--- a/css/10000hours.css
+++ b/css/10000hours.css
@@ -256,6 +256,16 @@ text-align: center;
     font-weight: 400;
 }
 
-    
+.mobile_br {
+    display: block;
 }
-
+.go {
+    width: 186px;
+    height: 40px;
+    margin-left: 0;
+}
+.share {
+    width: 92px;
+    height: 40px;
+}
+}
